@@ -1,27 +1,39 @@
-# 一键部署说明
+# 一键部署
 
-本文档试用于v2.1.0版本一键部署。v2.1.0之前版本一键部署可参考[文档](./deployOld.md)。
+标签：``区块链浏览器`` ``部署`` 
 
-## 1、前提条件
+----
+
+本文档试用于v2.1.0及之后版本一键部署。v2.1.0之前版本一键部署可参考[文档](./deployOld.md)。
+
+## 1.前提条件
 
 | 环境   | 版本                   |
 | ------ | ---------------------- |
 | Java   | JDK8或以上版本 |
 | MySQL | MySQL-5.6或以上版本 |
-| Python | Python3.4+ |
+| Python | Python3.5+ |
 | PyMySQL | 使用python3时需安装 |
 
 ### 检查环境
 
+#### 平台要求
+
+推荐使用CentOS 7.2+, Ubuntu 16.04及以上版本, 一键部署脚本将自动安装`openssl, curl, wget, git, nginx`相关依赖项。
+
+其余系统可能导致安装依赖失败，可自行安装`openssl, curl, wget, git, nginx`依赖项后重试
+
 #### 检查Java
 
-JDK8或以上版本：
+推荐JDK8-JDK13版本：
 
 ```
 java -version
 ```
 
 - Java推荐使用[OpenJDK](#id10) ，建议从[OpenJDK网站](https://jdk.java.net/java-se-ri/11) 自行下载。
+
+- **注意：需要配置root用户的java_home**
 
 #### 检查mysql
 
@@ -35,32 +47,25 @@ mysql --version
 
 #### 检查Python
 
-Python3.4或以上版本：
+<span id="checkpy"></span>
+
+使用Python3.5或以上版本：
 
 ```
-python --version
+python3 --version
 ```
 
-- Python安装部署可参考[Python部署](#id17)
+- Python3安装部署可参考[Python部署](#python3)
 
-#### PyMySQL部署（Python3.4+）
+#### PyMySQL部署（Python3.5+）
 
-**备注** 使用python2.7+时，需安装MySQL-python，推荐参考[Mysql-python安装示例](#mysql-python)的python2指南进行安装；
-
-Python3.4及以上版本，需安装PyMysql依赖包：
+Python3.5及以上版本，需安装PyMysql依赖包：
 
 - CentOS
 
   ```
+  sudo yum -y install python36-pip
   sudo pip3 install PyMySQL
-  ```
-
-  不支持pip命令的话，可以使用以下方式：
-
-  ```
-  git clone https://github.com/PyMySQL/PyMySQL
-  cd PyMySQL/
-  python3 setup.py install
   ```
 
 - Ubuntu
@@ -70,21 +75,30 @@ Python3.4及以上版本，需安装PyMysql依赖包：
   sudo pip3 install PyMySQL
   ```
 
-## 2、拉取代码
+ CentOS或Ubuntu不支持pip命令的话，可以使用以下方式：
 
-执行命令：
-
-```shell
-git clone https://github.com/FISCO-BCOS/fisco-bcos-browser.git
+```
+  git clone https://github.com/PyMySQL/PyMySQL
+  cd PyMySQL/
+  python3 setup.py install
 ```
 
+## 2.拉取安装脚本
+
+获取部署安装包：
+```shell
+wget https://osp-1257653870.cos.ap-guangzhou.myqcloud.com/FISCO-BCOS/fisco-bcos-browser/releases/download/v2.2.2/browser-deploy.zip
+```
+解压安装包：
+```shell
+unzip browser-deploy.zip
+```
 进入目录：
-
 ```shell
-cd fisco-bcos-browser/deploy
+cd browser-deploy
 ```
 
-## 3、修改配置（没有变化的可以不修改）
+## 3.修改配置（没有变化的可以不修改）
 
 ① 可以使用以下命令修改，也可以直接修改文件（vi common.properties）
 
@@ -105,35 +119,35 @@ cd fisco-bcos-browser/deploy
 例子（将数据库IP由127.0.0.1改为0.0.0.0）：sed -i "s/127.0.0.1/0.0.0.0/g" application.yml
 ```
 
-## 4、部署
+## 4.部署
 
 部署所有服务：
 
 ```shell
-python deploy.py installAll
+python3 deploy.py installAll
 ```
 
 停止所有服务：
 
 ```shell
-python deploy.py stopAll
+python3 deploy.py stopAll
 ```
 
 启动所有服务：
 
 ```shell
-python deploy.py startAll
+python3 deploy.py startAll
 ```
 
 单独启停命令和说明可查看帮助：
 
 ```shell
-python deploy.py help
+python3 deploy.py help
 ```
 
 **备注：** 部署过程出现问题可以查看 [常见问题](#id19)
 
-## 5、访问
+## 5.访问
 
 例如：在浏览器输入以下访问地址，IP为部署服务器IP，端口为前端服务端口
 
@@ -141,14 +155,14 @@ python deploy.py help
 http://127.0.0.1:5100/
 ```
 
-## 6、日志路径
+## 6.日志路径
 ```
 部署日志：log/
 后端日志：server/log/
 前端日志：web/log/
 ```
 
-## 7、附录
+## 7.附录
 
 ### 7.1 Java环境部署
 
@@ -276,44 +290,28 @@ mysql > create database db_browser;
 
 ### 7.3. Python部署
 
+<span id="python3"></span>
+
+python版本要求使用python3.x, 推荐使用python3.5及以上版本
+
 - CentOS
 
   ```
-  sudo yum install -y python-requests
+  sudo yum install -y python36
+  sudo yum install -y python36-pip
   ```
 
 - Ubuntu
 
   ```
-  sudo apt-get install -y python-requests
+  // 添加仓库，回车继续
+  sudo add-apt-repository ppa:deadsnakes/ppa
+  // 安装python 3.6
+  sudo apt-get install -y python3.6
+  sudo apt-get install -y python3-pip
   ```
 
-### 7.4. 安装MySql python依赖包
-
-#### 查看python版本
-
-```
-python --version
-```
-
-python3.4+ 安装Mysql依赖包，可参考 [检查环境-PyMysql](#pymysql-python3-4)
-
-#### 4.1 MySQL-python部署（Python2.7）
-
-- CentOS
-
-  ```
-  sudo yum install -y MySQL-python
-  ```
-
-- Ubuntu
-
-  ```
-  sudo apt-get install -y python-pip
-  sudo pip install MySQL-python
-  ```
-
-## 8、常见问题
+## 8.常见问题
 
 ### 8.1 数据库安装后登录报错
 
@@ -337,17 +335,28 @@ service mysqld restart
 mysql -uroot -p mysql
 ```
 
-### 8.2. 使用Python2时找不到MySQLdb
+### 8.2. Python命令出错
+
+- SyntaxError报错
 
 ```
-Traceback (most recent call last):
-...
-ImportError: No module named MySQLdb
+  File "deploy.py", line 62
+    print helpMsg
+                ^
+SyntaxError: Missing parentheses in call to "print". Did you mean print(helpMsg)?
 ```
 
-答：需要安装MySQL-python，安装请参看 [MySQL-python](#mysql-python-python2-7)
+- 找不到fallback关键字
 
-### 8.3. 使用Python3时找不到pymysql
+```
+File "/home/ubuntu/webase-deploy/comm/utils.py", line 127, in getCommProperties
+    value = cf.get('common', paramsKey,fallback=None)
+TypeError: get() got an unexpected keyword argument 'fallback'
+```
+
+答：检查[Python版本](#checkpy)，推荐使用python3.5及以上版本
+
+### 8.3 使用Python3时找不到pymysql
 
 ```
 Traceback (most recent call last):
@@ -355,36 +364,9 @@ Traceback (most recent call last):
 ImportError: No module named 'pymysql'
 ```
 
-答：需要安装PyMySQL，安装请参看 [pymysql](#pymysql-python3-4)
+答：需要安装PyMySQL，安装请参看 [pymysql](#pymysql-python3-5)
 
-### 8.4. 安装MySQL-python遇到问题
-
-```
-Command "python setup.py egg_info" failed with error code 1
-```
-
-答：运行下面两个命令
-
-```
-pip install --upgrade setuptools
-python -m pip install --upgrade pip
-```
-
-### 8.5 部署时编译包下载慢
-
-```
-...
-Connecting to github-production-release-asset-2e65be.s3.amazonaws.com (github-production-release-asset-2e65be.s3.amazonaws.com)|52.216.112.19|:443... connected.
-HTTP request sent, awaiting response... 200 OK
-Length: 22793550 (22M) [application/octet-stream]
-Saving to: ‘fisco-bcos-browser.zip’
-
- 0% [                                                                                                                                ] 77,974      37.8KB/s    
-```
-
-答：部署过程会下载工程编译包，可能会因为网络原因导致过慢。此时，可以先手动下载 [编译包](https://github.com/FISCO-BCOS/fisco-bcos-browser/releases/download/v2.0.2/fisco-bcos-browser.zip)，再上传至服务器deploy目录，在部署过程中根据提示不再重新下载编译包。
-
-### 8.6 部署时数据库访问报错
+### 8.4 部署时数据库访问报错
 
 ```
 ...
@@ -392,20 +374,15 @@ checking database connection
 Traceback (most recent call last):
   File "/data/temp/browser/fisco-bcos-browser/deploy/comm/mysql.py", line 21, in dbConnect
     conn = mdb.connect(host=mysql_ip, port=mysql_port, user=mysql_user, passwd=mysql_password, charset='utf8')
-  File "/usr/lib64/python2.7/site-packages/MySQLdb/__init__.py", line 81, in Connect
-    return Connection(*args, **kwargs)
-  File "/usr/lib64/python2.7/site-packages/MySQLdb/connections.py", line 193, in __init__
-    super(Connection, self).__init__(*args, **kwargs2)
 OperationalError: (1045, "Access denied for user 'root'@'localhost' (using password: YES)")
 ```
 
 答：确认数据库用户名和密码
 
-### 8.7 Server启动失败
-答：1: 请检查是否设置了JAVA_HOME。
-    2: 检查gradle版本是否在5.0以上。
-    3: 检查jdk版本，如果使用的是jdk9或者更高版本，需要在项目启动时加入 --add-modules java.xml.bind 后缀，但是这种方法只能在JDK9或者10去使用。修改位置：server/start.sh文件，start()函数，nohub $JAVA_HOME/bin/java 语句之后加上 --add-modules java.xml.bind
-    
-### 8.8 server启动成功，但提示启动失败
+### 8.5 Server启动失败
+答：1: 请检查是否设置了JAVA_HOME。 2: 检查gradle版本是否在5.0以上。 3: 检查jdk版本，如果使用的是jdk9或者更高版本，需要在项目启动时加入 –add-modules java.xml.bind 后缀，但是这种方法只能在JDK9或者10去使用。修改位置：server/start.sh文件，start()函数，nohub $JAVA_HOME/bin/java 语句之后加上 –add-modules java.xml.bind
+
+### 8.6 server启动成功，但提示启动失败
+
 答：将openjdk换成oracle jdk，因为openjdk中缺少一些组件。
 
